--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -1,6 +1,5 @@
 -# in app/views/movies/show.html.haml
-
-%h2 Details about #{@movie.title}
+%h3 Details about #{@movie.title}
 
 %ul#details
   %li
@@ -9,8 +8,14 @@
   %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
+    
+  %li
+    Director:
+    = @movie.director
+  
+  = link_to "Find Movies With Same Director", similar_movies_path(@movie.title)
 
-%h3 Description:
+%h4 Description:
 
 %p#description= @movie.description
 
